[metadata]
name = tamlib
version = 0.0.1

[options]
include_package_data = True
packages =
    tamlib
    tamlib.utils
    tamlib.cv_bridge
    tamlib.node_template
    tamlib.open3d
    tamlib.rosutils
    tamlib.tf
package_dir =
    = src
install_requires =
    rospy
    numpy
    addict
    pyyaml
    actionlib
    message_filters
    open3d==0.16.0
    scipy
